# Panda_Husky

src/: .gitignore
src/Franka_Panda_Color_Sorting_Robot/: .dockerignore  .gitignore  Dockerfile  README.md
src/Franka_Panda_Color_Sorting_Robot/panda_bringup/: CMakeLists.txt  package.xml
src/Franka_Panda_Color_Sorting_Robot/panda_bringup/launch/: pick_and_place.launch.py
src/Franka_Panda_Color_Sorting_Robot/panda_controller/: CMakeLists.txt  package.xml
src/Franka_Panda_Color_Sorting_Robot/panda_controller/launch/: controller.launch.py  slider_controller.launch.py
src/Franka_Panda_Color_Sorting_Robot/panda_controller/panda_controller/: slider_controller.py
src/Franka_Panda_Color_Sorting_Robot/panda_description/: CMakeLists.txt  package.xml
src/Franka_Panda_Color_Sorting_Robot/panda_description/launch/: display.launch.py  gazebo.launch.py
src/Franka_Panda_Color_Sorting_Robot/panda_description/rviz/: display.rviz
src/Franka_Panda_Color_Sorting_Robot/panda_description/urdf/: arm.xacro  gazebo.xacro  materials.xacro  panda.urdf.xacro  ros2control.xacro
src/Franka_Panda_Color_Sorting_Robot/panda_description/worlds/: empty.world
src/Franka_Panda_Color_Sorting_Robot/panda_moveit/: CMakeLists.txt  package.xml
src/Franka_Panda_Color_Sorting_Robot/panda_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  panda.srdf
src/Franka_Panda_Color_Sorting_Robot/panda_moveit/launch/: moveit.launch.py
src/Franka_Panda_Color_Sorting_Robot/panda_vision/: package.xml  setup.py
src/Franka_Panda_Color_Sorting_Robot/panda_vision/panda_vision/: color_detector.py
src/Franka_Panda_Color_Sorting_Robot/pymoveit2/: CMakeLists.txt
src/husky_panda_sim/: .gitignore  CMakeLists.txt  package.xml
src/husky_panda_sim/config/: husky_panda_controllers.yaml
src/husky_panda_sim/launch/: simulation.launch.py
src/husky_panda_sim/models/husky/: model.config  model.sdf
src/husky_panda_sim/models/husky_panda/: model.config  model.sdf
src/husky_panda_sim/src/: arm.py  depth_grasp.py  drive_to_cube.py  final.py  husky_blue_align.py  husky_view_only.py  mobile_pick_place.py  new.py  test_arm_direct.py  visual_pick.py
src/husky_panda_sim/urdf/: husky_panda.urdf  panda_macro.xacro.save
src/husky_panda_sim/worlds/: camera.sdf  pick_place.sdf
(+3 files in other folders)
